# unicode-text-utils

./: CMakeLists.txt  LICENSE  README.md  formatter.cpp  formatter.h  recolumn.cpp  recolumn.md  ufmt.cpp  ufmt.md  unorm.cpp  unorm.md  usplit.cpp  usplit.md  util.cpp  util.h  uwc.cpp  uwc.md
